# travel-agency-platform-service

./: .gitignore
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: booking.py  price_intelligence.py  rapidapi.py
app/core/: rapidapi_client.py
app/models/: __init__.py  booking.py  price_intelligence.py
app/schemas/: booking.py  price_intelligence.py
app/services/: rapidapi_service.py
travel-agency-platform/travel-agency-api/: README.md  pyproject.toml
travel-agency-platform/travel-agency-api/app/: main.py
travel-agency-platform/travel-agency-api/app/api/v1/: router.py
travel-agency-platform/travel-agency-api/app/api/v1/endpoints/: booking.py  rapidapi.py  travel.py
travel-agency-platform/travel-agency-api/app/core/: amadeus_client.py  config.py  database.py  rapidapi_client.py
travel-agency-platform/travel-agency-api/app/models/: __init__.py  booking.py  travel.py
travel-agency-platform/travel-agency-api/app/schemas/: booking.py  travel.py
travel-agency-platform/travel-agency-api/app/services/: rapidapi_service.py  travel_service.py
travel-agency-platform/travel-agency-app/: README.md  index.html  package-lock.json  package.json  vite.config.js
travel-agency-platform/travel-agency-app/src/: App.vue  main.js  style.css
travel-agency-platform/travel-agency-app/src/components/: ActivityList.vue  AppHeader.vue  FlightList.vue  HotelList.vue  PriceForecast.vue  SearchPanel.vue  SummaryPanel.vue
travel-agency-platform/travel-agency-app/src/composables/: useAuth.js  useBooking.js  useSearch.js
(+12 files in other folders)
