[project]
name = "travel-agency-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "amadeus>=12.0.0",
    "email-validator>=2.2.0",
    "fastapi[standard]>=0.135.3",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]
